# polymeme

./: .gitignore  BLOCKCHAIN_INTEGRATION_SUMMARY.md  README.md  SMART_CONTRACT_ANALYSIS.md  SMART_CONTRACT_LOGIC_BREAKDOWN.md  TESTING_GUIDE.md  TRANSACTION_FLOW.md  VERIFICATION_CHECKLIST.md  package-lock.json  package.json  supabase-add-token-fields.sql  supabase-bets-schema.sql  supabase-markets-update.sql  supabase-migration-add-resolution-fields.sql  supabase-quick-fix.sql  supabase-schema.sql  supabase-users-schema.sql  test-frontend-integration.js
app/: globals.css  layout.tsx  page.tsx
app/create-market/: page.tsx  page.tsx.backup
app/global/: page.tsx
app/leaderboard/: page.tsx
components/: betting-interface-real.tsx  betting-interface.tsx  chart-variants.tsx  header.tsx  market-coverflow.tsx  market-data-tab.tsx  market-rules.tsx  market-stats.tsx  order-book.tsx  realtime-token-chart.tsx  token-info-card.tsx  token-news.tsx  wallet-aware-link.tsx  wallet-connect.tsx  wallet-guard.tsx
contexts/: UserContext.tsx  WalletContext.tsx
data/: markets.json
hooks/: use-wallet-assets.ts
lib/: api.ts  coingecko.ts  i18n.tsx  market-resolution.ts  market-scheduler.ts  smart-contract-real.ts  smart-contract.ts  smart-descriptions.ts  smart-questions.ts  supabase.ts  wallet-assets.ts
scripts/: add-sample-bets.js  create-wif-market.js
smart-contract/: Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  package.json
smart-contract/programs/prediction-market/src/: lib.rs  lib_fixed.rs
smart-contract/tests/: prediction-market.ts
(+27 files in other folders)
