[package]
name = "prediction-market"
version = "0.1.0"
description = "Pool-based prediction market on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
switchboard-v2 = "0.4.0"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = "1.0"
